--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "markdown",
+  "homepage": "https://gitname.github.io/react-gh-pages",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-+   "deploy": "gh-pages -d build",
+   "deploy": "markdown-previewer -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
