--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://KylesTech95.github.io/react-gh-pages",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
